--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         data-image-width="1169" data-image-height="924">
       <p class="u-align-center u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-1"> Tu Visión Web Hecha
         Realidad con Pasión y Creatividad</p>
-      <a href="tel:+54 9 11 4424-7855"
+      <a href="Carpeta/Servicios.html"
         class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-heading-font u-hover-custom-color-15 u-radius u-btn-1">Ver
         Servicios </a>
     </div>
@@ -417,10 +417,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </div>
   </section>
   <section class="u-clearfix u-custom-color-23 u-section-5" id="sec-021c">
+    <p class="u-custom-font u-heading-font u-hidden-sm u-text u-text-custom-color-17 u-text-1">Preguntas Frecuentes </p>
     <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-image-1"
       src="images/Untitled2-1536x73513x.png" alt="" data-image-width="1689" data-image-height="2178">
-    <div
-      class="custom-expanded u-accordion u-align-center-md u-align-center-sm u-align-center-xs u-spacing-2 u-accordion-1">
+    <div class="custom-expanded u-accordion u-spacing-2 u-accordion-1">
       <div class="u-accordion-item u-accordion-item-1">
         <a class="active u-accordion-link u-button-style u-custom-font u-heading-font u-text-black u-accordion-link-1"
           id="link-accordion-7c0e" aria-controls="accordion-7c0e" aria-selected="true">
@@ -432,7 +432,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           class="u-accordion-active u-accordion-pane u-align-left u-container-align-left u-container-style u-opacity u-opacity-65 u-white u-accordion-pane-1"
           id="accordion-7c0e" aria-labelledby="link-accordion-7c0e">
           <div class="u-container-layout u-valign-top u-container-layout-1">
-            <p class="u-custom-font u-text u-text-custom-color-25 u-text-1"> Puedes contactarnos a través de nuestro
+            <p class="u-custom-font u-text u-text-custom-color-25 u-text-2"> Puedes contactarnos a través de nuestro
               correo electrónico<span style="font-weight: 600;" class="u-text-black">
                 meraki.websolution@gmail.com</span>, teléfono <span class="u-text-black" style="font-weight: 500;">
                 <span style="font-weight: 600;">
@@ -463,29 +463,11 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           class="u-accordion-pane u-align-left u-container-align-left u-container-style u-opacity u-opacity-65 u-white u-accordion-pane-2"
           id="accordion-05cb" aria-labelledby="link-accordion-05cb">
           <div class="u-container-layout u-valign-top u-container-layout-2">
-            <ul class="u-custom-list u-text u-text-2">
-              <li>
-                <div class="u-list-icon">
-                  <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                    xml:space="preserve" class="u-svg-content">–</div>
-                </div>Diseño y desarrollo web (landing pages, páginas corporativas, tiendas online).
-
-              </li>
-              <li>
-                <div class="u-list-icon">
-                  <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                    xml:space="preserve" class="u-svg-content">–</div>
-                </div>Identidad de marca (logo, paleta de colores, tipografía, diseño de tarjetas, papelería).
-              </li>
-              <li>
-                <div class="u-list-icon">
-                  <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                    xml:space="preserve" class="u-svg-content">–</div>
-                </div>Diseño gráfico (flyers, posters, empaques, contenido para redes sociales).
-              </li>
-              <li>
-
-              </li>
+            <ul class="u-text u-text-3">
+              <li> Diseño y desarrollo web (landing pages, páginas corporativas, tiendas online)</li>
+              <li> Diseño y desarrollo web personalizado</li>
+              <li> Identidad de marca (logo, paleta de colores, tipografía, diseño de tarjetas, papelería)</li>
+              <li> Diseño gráfico (flyers, posters, animaciones, contenido para redes sociales)</li>
             </ul>
           </div>
         </div>
@@ -507,17 +489,21 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           class="u-accordion-pane u-align-left u-container-align-left u-container-style u-opacity u-opacity-65 u-white u-accordion-pane-3"
           id="accordion-a6bb" aria-labelledby="link-accordion-a6bb">
           <div class="u-container-layout u-valign-top u-container-layout-3">
-            <ul class="u-custom-list u-text u-text-3">
+            <ul class="u-custom-list u-text u-text-4">
               <li>
                 <div class="icono-lista-u">
                   <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" versión="1.1"
-                    xml:space="preservar" clase="u-svg-content"></div>
-                </div>Sí, ofrecemos servicios de soporte y mantenimiento web para asegurar que el sitio se mantenga
-                actualizado y funcional.
+                    xml:space="preservar" clase="u-svg-content">
+                    <span
+                      style="background-color: transparent; color: #111111; font-family: 'Open Sans',sans-serif; font-size: 1rem;">Sí,
+                      ofrecemos servicios de soporte y mantenimiento web para asegurar que el sitio se
+                      mantenga&nbsp;</span>
+                    <span
+                      style="background-color: transparent; color: #111111; font-family: 'Open Sans',sans-serif; font-size: 1rem;">actualizado
+                      y funcional.</span>
+                  </div>
+                </div>
               </li>
-
-
-
             </ul>
           </div>
         </div>
@@ -539,15 +525,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           class="u-accordion-pane u-align-left u-container-align-left u-container-style u-opacity u-opacity-65 u-white u-accordion-pane-4"
           id="accordion-a6bb" aria-labelledby="link-accordion-a6bb">
           <div class="u-container-layout u-valign-top u-container-layout-4">
-            <ul class="u-custom-list u-text u-text-4">
+            <ul class="u-custom-list u-text u-text-5">
               <li>
                 <div class="icono-lista-u">
                   <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" versión="1.1"
-                    xml:space="preservar" clase="u-svg-content"></div>
-                </div>El tiempo varía según el proyecto, pero generalmente se completa en varias semanas o meses,
-                dependiendo de los requerimientos acordados.
+                    xml:space="preservar" clase="u-svg-content">El tiempo varía según el proyecto, pero generalmente se
+                    completa en varias semanas o meses,dependiendo de los requerimientos acordados.<br>
+                  </div>
+                </div>
               </li>
-
             </ul>
           </div>
         </div>
@@ -569,23 +555,22 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           class="u-accordion-pane u-align-left u-container-align-left u-container-style u-opacity u-opacity-65 u-white u-accordion-pane-5"
           id="accordion-a6bb" aria-labelledby="link-accordion-a6bb">
           <div class="u-container-layout u-valign-top u-container-layout-5">
-            <ul class="u-custom-list u-text u-text-5">
+            <ul class="u-custom-list u-text u-text-6">
               <li>
                 <div class="icono-lista-u">
                   <div xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" versión="1.1"
-                    xml:space="preservar" clase="u-svg-content"></div>
-                </div>Sí, solicitamos un depósito del 50% del costo total antes de comenzar el proyecto.
+                    xml:space="preservar" clase="u-svg-content">
+                    <span
+                      style="background-color: transparent; color: #111111; font-family: 'Open Sans',sans-serif; font-size: 1rem;">Sí,
+                      solicitamos un depósito del 50% del costo total antes de comenzar el proyecto.</span>
+                  </div>
+                </div>
               </li>
-
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <p
-      class="u-custom-font u-heading-font u-hidden-md u-hidden-sm u-hidden-xs u-text u-text-custom-color-17 u-text-default u-text-6">
-      Preguntas<br>Frecuentes
-    </p>
   </section>
   <section class="u-clearfix u-custom-color-23 u-section-6" id="sec-8cc6">
     <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-1">Contactanos</p>
@@ -650,7 +635,6 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     <img class="u-image u-image-contain u-image-default u-opacity u-opacity-25 u-image-4"
       src="images/Untitled2-1536x73511.png" alt="" data-image-width="295" data-image-height="285">
   </section>
-
 
 
 
