--- a/Carpeta/Planes.html
+++ b/Carpeta/Planes.html
@@ -104,6 +104,18 @@
     </div>
   </header>
   <section class="u-clearfix u-custom-color-21 u-section-1" id="sec-7544">
+    <a href="tel:+54 9 11 4424-7855"
+      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-1">Contactar
+    </a>
+    <a href="tel:+54 9 11 4424-7855"
+      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-2">Contactar
+    </a>
+    <a href="tel:+54 9 11 4424-7855"
+      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-3">Contactar
+    </a>
+    <a href="tel:+54 9 11 4424-7855"
+      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-4">Contactar
+    </a>
     <img class="u-image u-image-contain u-image-default u-opacity u-opacity-20 u-image-1"
       src="../images/Untitled3-1536x7351.png" alt="" data-image-width="799" data-image-height="841">
     <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-2"
@@ -160,8 +172,8 @@
       <div class="u-container-layout u-container-layout-3">
         <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-12">Desarrollo de Web
           E-Commerce </p>
-        <a href="tel:+54 9 11 4424-7855"
-          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-1">Contactar
+        <a href="https://wa.link/t6zrps"
+          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-5">Contactar
         </a>
       </div>
     </div>
@@ -221,8 +233,8 @@
         <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-24"> Desarrollo
           de<br>Landing Page
         </p>
-        <a href="#"
-          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-2">Contactar
+        <a href="https://wa.link/t6zrps"
+          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-6">Contactar
         </a>
       </div>
     </div>
@@ -276,9 +288,9 @@
         <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-36"> Desarrollo
           de<br>Web Corporativa
         </p>
-        <a href="#"
-          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-3">Contactar
-        </a>
+        <a href="https://wa.link/t6zrps"
+          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-7"
+          target="_blank">Contactar </a>
       </div>
     </div>
     <p class="u-custom-font u-heading-font u-hidden-md u-hidden-sm u-hidden-xs u-text u-text-custom-color-17 u-text-37">
@@ -330,9 +342,9 @@
       <div class="u-container-layout u-container-layout-12">
         <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-48">Web Personalizada
         </p>
-        <a href="#"
-          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-4">Contactar
-        </a>
+        <a href="https://wa.link/t6zrps"
+          class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hover-custom-color-9 u-radius u-btn-8"
+          target="_blank">Contactar </a>
       </div>
     </div>
     <div class="u-border-2 u-border-palette-5-light-2 u-expanded-width u-line u-line-horizontal u-line-1"></div>
@@ -361,18 +373,6 @@
           Hecho con amor y potenciado por merakiwebsolution.com.ar</p>
       </div>
     </div>
-    <a href="tel:+54 9 11 4424-7855"
-      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-5">Contactar
-    </a>
-    <a href="tel:+54 9 11 4424-7855"
-      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-6">Contactar
-    </a>
-    <a href="tel:+54 9 11 4424-7855"
-      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-7">Contactar
-    </a>
-    <a href="tel:+54 9 11 4424-7855"
-      class="u-btn u-btn-round u-button-style u-custom-color-26 u-custom-font u-heading-font u-hidden-xl u-hover-custom-color-9 u-radius u-btn-8">Contactar
-    </a>
   </section>
 
 
