--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
           </nav>
         </div>
       </div>
+      <a href="https://wa.link/t6zrps"
+        class="u-btn u-btn-round u-button-style u-custom-color-9 u-custom-font u-heading-font u-hidden-md u-hidden-sm u-hidden-xs u-hover-custom-color-26 u-radius u-text-hover-white u-text-white u-btn-1">Contactanos
+      </a>
     </div>
   </header>
   <section class="u-clearfix u-custom-color-21 u-section-1" id="sec-5bb1">
@@ -116,7 +119,7 @@
         data-image-width="1169" data-image-height="924">
       <p class="u-align-center u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-1"> Tu Visión Web Hecha
         Realidad con Pasión y Creatividad</p>
-      <a href="Carpeta/Servicios.html"
+      <a href="tel:+54 9 11 4424-7855"
         class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-heading-font u-hover-custom-color-15 u-radius u-btn-1">Ver
         Servicios </a>
     </div>
