--- a/index.html
+++ b/index.html
@@ -20,17 +20,27 @@
 
 
 
-
-
-
-
-
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
 		"logo": "images/Mesadetrabajo1.png"
 }</script>
+
+  <script>
+    // Desactivar clic derecho
+    document.addEventListener('contextmenu', function (e) {
+      e.preventDefault();
+    });
+
+    // Deshabilitar algunas combinaciones de teclas
+    document.addEventListener('keydown', function (e) {
+      if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && e.key === 'I') || (e.ctrlKey && e.key === 'U')) {
+        e.preventDefault();
+      }
+    });
+  </script>
+
   <meta name="theme-color" content="#478ac9">
   <meta property="og:title" content="Inicio">
   <meta property="og:type" content="website">
