arreglo boton ver todos los planes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       }
     });
   </script>
-
   <meta name="theme-color" content="#478ac9">
   <meta property="og:title" content="Inicio">
   <meta property="og:type" content="website">
@@ -418,7 +417,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       <p class="u-custom-font u-text u-text-custom-color-19 u-text-11"> Conoce Nuestros Precios para Desarrollo
         eCommerce: Soluciones a Medida con la Mejor Relación Calidad-Precio para Impulsar Tu Tienda Online</p>
       <div class="u-container-style u-expanded-width-xs u-group u-hidden-xs u-radius u-shape-round u-white u-group-3"
-        data-href="tel:+54 9 11 4424-7855">
+        data-href="Carpeta/Planes.html">
         <div class="u-container-layout u-container-layout-3">
           <p class="u-custom-font u-heading-font u-text u-text-custom-color-17 u-text-default u-text-12">Desarrollo de
             Web E-Commerce </p>
