--- a/Carpeta/Servicios.html
+++ b/Carpeta/Servicios.html
@@ -17,7 +17,18 @@
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900|Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 
+  <script type="text/javascript">
+    document.addEventListener('contextmenu', function (e) {
+      e.preventDefault();
+    });
 
+    document.addEventListener('keydown', function (e) {
+      // Disable F12, Ctrl+Shift+I, Ctrl+U
+      if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && e.key === 'I') || (e.ctrlKey && e.key === 'U')) {
+        e.preventDefault();
+      }
+    });
+  </script>
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
